RESOLVED FIXED7200
Gradient appears and disappears in SVG when text is off screen
https://bugs.webkit.org/show_bug.cgi?id=7200
Summary Gradient appears and disappears in SVG when text is off screen
Alexander Kellett
Reported 2006-02-11 15:14:44 PST
scrolling off the side of http://bugzilla.opendarwin.org/attachment.cgi?id=6042 shows the issue
Attachments
Reduced testcase. (684 bytes, image/svg+xml)
2007-01-02 06:19 PST, Nikolas Zimmermann
no flags
Initial patch (83.47 KB, text/plain)
2007-09-03 14:16 PDT, Nikolas Zimmermann
no flags
Updated patch (667.28 KB, patch)
2007-09-03 15:32 PDT, Nikolas Zimmermann
no flags
Updated patch v2 (84.17 KB, patch)
2007-09-03 15:43 PDT, Nikolas Zimmermann
oliver: review+
Layout test results (574.60 KB, text/plain)
2007-09-03 15:44 PDT, Nikolas Zimmermann
oliver: review+
Nikolas Zimmermann
Comment 1 2007-01-02 06:19:56 PST
Created attachment 12159 [details] Reduced testcase. The problem is actually, because of <tspan> in <text>, that breaks "gradient-on-text".
Eric Seidel (no email)
Comment 2 2007-01-31 04:51:24 PST
I can't tell if this is fixed. Niko?
Nikolas Zimmermann
Comment 3 2007-02-04 05:15:49 PST
(In reply to comment #2) > I can't tell if this is fixed. Niko? > Nope, problem is still persistent. Not sure how to fix yet. Niko
Nikolas Zimmermann
Comment 4 2007-09-03 14:16:20 PDT
Created attachment 16187 [details] Initial patch Not ready for review yet. Just for Oliver :-)
Nikolas Zimmermann
Comment 5 2007-09-03 15:32:46 PDT
Created attachment 16188 [details] Updated patch The reduced testcase is obsolete as the problem gets highlighted by a different (already commited) batik/text testcase.
Nikolas Zimmermann
Comment 6 2007-09-03 15:43:54 PDT
Created attachment 16189 [details] Updated patch v2 Some last hot fixes - demanded by Oliver. Seperated LayoutTests/ and patch upon request.
Nikolas Zimmermann
Comment 7 2007-09-03 15:44:59 PDT
Created attachment 16190 [details] Layout test results
Oliver Hunt
Comment 8 2007-09-04 01:30:16 PDT
Comment on attachment 16189 [details] Updated patch v2 Basically looks good, but i find myself wondering about SVGTextChunkWalkerBase and SVGTextChunkWalker, as it seems unnecessary to use both virtual methods *and* function pointers.
Oliver Hunt
Comment 9 2007-09-04 01:36:23 PDT
i'll r+ this if you can justify the exciting combo of function pointer and virtual methods in SVGTextChunkWalkerBase
Nikolas Zimmermann
Comment 10 2007-09-04 04:43:32 PDT
(In reply to comment #9) > i'll r+ this if you can justify the exciting combo of function pointer and > virtual methods in SVGTextChunkWalkerBase Hey Oliver, yeah nice combination :-) In fact I added SVGTextChunkWalkerBase later on, as it made it possible to remove the template based implementation of "walkTextChunks" in SVGRootInlineBox.h - I didn't like the fact to have crucial methods sitting in header files. Greetings, Niko
Oliver Hunt
Comment 11 2007-09-05 11:20:25 PDT
Comment on attachment 16190 [details] Layout test results changes look sane, rubber stamping
Nikolas Zimmermann
Comment 12 2007-09-05 11:29:21 PDT
Landed in r25370.
Note You need to log in before you can comment on or make changes to this bug.