(Oops, forgot to commit WebCore/ changes!) Reviewed by Oliver.

Rewrite text painting code path, to be based on "text chunks" instead of using the InlineBox* hierarchy.
This allows us to reuse paint servers as long as possible - and to actually paint in the way didacted by the spec.

This also implements advanced SVG text decorations (ie. stroked/filled decos with gradient/pattern).
Fixes: http://bugs.webkit.org/show_bug.cgi?id=7200 (Gradient appears and disappears in SVG when text is off screen)

Fixes paint server usage on text paths. (ie. styled text paths, with gradients/filters).


git-svn-id: http://svn.webkit.org/repository/webkit/branches/feature-branch@25371 268f45cc-cd09-0410-ab3c-d52691b4dbfc